@@ -151,6 +151,10 @@ PidFile "/var/run/vnstat/vnstat.pid"
 # use SQLite Write-Ahead Logging mode (1 = enabled, 0 = disabled)
 WriteAheadLoggingDatabase 0
 
+# change the setting of the SQLite "synchronous" flag
+# (-1 = auto, 0 = off, 1, = normal, 2 = full, 3 = extra)
+DatabaseSynchronous -1
+
 
 # vnstati
 ##
