@@ -213,6 +213,18 @@ unlimited entries or to 0 to disable the data collection of this
 resolution.
 
 .TP
+.B DatabaseSynchronous
+Change the setting of the SQLite "synchronous" flag which controls how much
+care is taken to ensure disk writes have fully completed when writing data to
+the database before continuing other actions. Higher values take extra steps
+to ensure data safety at the cost of slower performance. A value of 0 will
+result in all handling being left to the filesystem itself. Set to -1 to
+select the default value according to database mode controlled by
+.B WriteAheadLoggingDatabase
+setting. See SQLite documentation for more details regarding values from 1
+to 3. Value range: -1..3
+
+.TP
 .B HourlyDays
 Data retention duration for the one hour resolution entries. The configuration
 defines for how many past days entries will be stored. Set to -1 for
