@@ -166,6 +166,10 @@ void printcfgfile(void)
 	printf("# use SQLite Write-Ahead Logging mode (1 = enabled, 0 = disabled)\n");
 	printf("WriteAheadLoggingDatabase %d\n\n", cfg.waldb);
 
+	printf("# change the setting of the SQLite \"synchronous\" flag\n");
+	printf("# (-1 = auto, 0 = off, 1, = normal, 2 = full, 3 = extra)\n");
+	printf("DatabaseSynchronous %d\n\n", cfg.dbsynchronous);
+
 	printf("\n");
 
 	/* vnstati section */
